--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.0.0",
     "jsdom": "^21.1.0",
+    "pages": "^0.0.16",
     "prettier": "^2.7.1",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
